# neurobots_demonstrator

birrt/robot_motion_control/robot_motion_control/: CMakeLists.txt  package.xml
birrt/robot_motion_planning/bi_rrt_star_multi_robot_algorithm/: CMakeLists.txt  package.xml  rviz_setup_multi_robot_planning.rviz
birrt/robot_motion_planning/bi_rrt_star_multi_robot_algorithm/launch/: omnirob_robotino.launch
birrt/robot_motion_planning/bi_rrt_star_multi_robot_algorithm/src/: birrt_star_multi_robot.cpp  run_birrt_star_multi_robot_example.cpp
demo/database_msgs/: CMakeLists.txt  package.xml
demo/database_msgs/msg/: database_change.msg  object.msg  world.msg
demo/database_msgs/srv/: add_empty_object.srv  get_object.srv  get_objects.srv  get_world.srv  set_bool_attribute.srv  set_string_attribute.srv  update_object.srv
demo/goal_planner_gui_cpp/: CMakeLists.txt  POTENTIAL_PROBLEMS  package.xml
demo/goal_planner_gui_cpp/fast-downward/: build_configs.py
demo/goal_planner_gui_cpp/include/goal_planner_gui/: alternative_partition_entry.h  command_line.h  config_parser.h  constants.h  existential_partition_entry.h  experiment_logger.h  neurobots_world.h  partition_entry.h  partitions.h  planning.h  reference_list.h  relaxed_exploration.h  ros_database.h  structs.h  translator.h  universal_partition_entry.h
demo/goal_planner_gui_cpp/launch/: test.launch
demo/goal_planner_gui_cpp/scenarios/: test_1.pddl
demo/goal_planner_gui_cpp/src/: alternative_partition_entry.cpp  command_line.cpp  config.ini  config_parser.cpp  constants.cpp  existential_partition_entry.cpp  experiment_logger.cpp  main.cpp  neurobots_world.cpp  partition_entry.cpp  partitions.cpp  planning.cpp  reference_list.cpp  relaxed_exploration.cpp  ros_database.cpp  translator.cpp  universal_partition_entry.cpp
demo/goal_planner_gui_cpp/src/goals/: action_goal.cpp  alternative_action_goal.cpp  alternative_function_goal.cpp  function_goal.cpp  goal_context.cpp  goal_spec.cpp
demo/goal_planner_gui_cpp/src/gui/: ArgumentList.qml  back_menu_item.cpp  current_goal_item.cpp  goal_menu_item.cpp  image_text_item.cpp  misc_menu_item.cpp  plan_item.cpp  ref_item.cpp  selector.cpp  ui.qml
demo/goal_planner_gui_cpp/src/pddl/: actions.cpp  axioms.cpp  base_element.cpp  base_visitor.cpp  builtin.cpp  domain.cpp  exception.cpp  function_table.cpp  functions.cpp  literal.cpp  modules.cpp  parse_context.cpp  parser.cpp  predicates.cpp  problem.cpp  requirements.cpp  scope.cpp  tagable_object.cpp  terms.cpp  test.cpp  translators.cpp  types.cpp  utils.cpp  visitors.cpp
demo/goal_planner_gui_cpp/src/planning/: plan.cpp  plan_node.cpp  planner.cpp  writer.cpp
demo/goal_planner_gui_cpp/src/references/: feature_reference.cpp  function_reference.cpp  identity_reference.cpp  other_reference.cpp  reference.cpp  relational_reference.cpp  typename_reference.cpp
demo/goal_planner_gui_cpp/src/relaxed_exploration/: plan_graph.cpp  proposition.cpp  unary_op.cpp
demo/motion_planners/prm_planner/neurobots_prm_planner_problems/: CMakeLists.txt  neurobots_prm_planner_problems_plugin.xml  package.xml
demo/neurobots_auto_drinking/: CMakeLists.txt  package.xml
demo/neurobots_auto_drinking/launch/: auto_drinking_planner.launch
demo/neurobots_auto_drinking/src/: auto_drinking_planner.cpp
demo/neurobots_commander/: CMakeLists.txt  commander.py  package.xml
demo/neurobots_commander/ansi2html/: style.py
demo/neurobots_commander/config/: commands.config  machines.config  progress.config  rosout.config
demo/neurobots_commander/gui/: build.in  gui.ui  resources.qrc
demo/neurobots_commander/scripts/: asyncproc.py  command_node.py  console.py  ping.py  process_handler.py
demo/neurobots_database/: CMakeLists.txt  README.txt  package.xml
demo/neurobots_database/include/neurobots_database/: attributes.h  database.h  database_server.h  pddl_parser.h
demo/neurobots_database/src/: attributes.cpp  database.cpp  database_server.cpp  main.cpp  pddl_parser.cpp
demo/neurobots_database_gui/: CMakeLists.txt  package.xml
demo/neurobots_database_gui/include/neurobots_database_gui/: element.h  gui.h  painter.h  tree.h
demo/neurobots_database_gui/src/: element.cpp  gui.cpp  main.cpp  painter.cpp  tree.cpp
demo/neurobots_scene_perception/mouth_detection/: CMakeLists.txt  haarcascade_eyes.xml  haarcascade_frontalface_alt.xml  package.xml
demo/neurobots_scene_perception/mouth_detection/launch/: mouth_detection.launch  mouth_detection_test.launch
demo/neurobots_scene_perception/mouth_detection/src/: detect_mouth.cpp  mouth_detector.cpp
kuka/: README  (+1 more)
kuka/hands/schunk_sdh2/sdh2_hand/: CMakeLists.txt  package.xml
kuka/kuka/iiwa/iiwa_fri/: CMakeLists.txt  package.xml
kuka/kuka/iiwa/iiwa_hand_guiding/: .classpath  .gitignore  .project  CMakeLists.txt  RoboticsAPI.config.xml  package.xml  start.in
kuka/kuka/iiwa/iiwa_java_controller/: .classpath  .gitignore  .project  CMakeLists.txt  RoboticsAPI.config.xml  RoboticsAPI.data.xml  package.xml  start_iiwa_controller.in
kuka/kuka/kuka_commander/: .gitignore  CMakeLists.txt  commander  package.xml
kuka/kuka/kuka_commander/gui/: .gitignore  build.in  camera_calibration.ui  gui.ui  resources.qrc
kuka/kuka/kuka_commander/scripts/: asyncproc.py  camera_calibration_configs.py  console.py  ping.py  process_handler.py
kuka/kuka/kuka_manager/: CMakeLists.txt  checkBattery  config.txt  package.xml  screenconfig-omnirob  screenconfig-supervisor  start_omniRob_onboard  start_supervisor
kuka/kuka/kuka_manager/launch/: iiwa_all.launch  iiwa_description.launch  iiwa_manager.launch  kuka_manager.launch  moveit_iiwa.launch  moveit_iiwa_sdh2.launch  moveit_iiwa_wsg.launch  moveit_omnirob_sdh2.launch  moveit_omnirob_wsg.launch  (+3 more)
kuka/kuka/kuka_moveit_controller/: CMakeLists.txt  package.xml
kuka/kuka/lbr_camera_calibration/: CMakeLists.txt  package.xml
kuka/libraries/aruco/: CMakeLists.txt  package.xml
kuka/libraries/realtime_urdf_filter/: CMakeLists.txt  package.xml
kuka/libraries/timesync/: CMakeLists.txt  README  package.xml
prm_planner/ros_util/ais_util/: CMakeLists.txt  package.xml
(+1130 files in other folders)
